--- a/soil-fertilizer/index.html
+++ b/soil-fertilizer/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/styles.css">
 
   <title>Soil, Fertilizer, &amp; Amendments</title>
   <meta name="description" content="All GrizzlyGreens articles in Soil, Fertilizer, &amp; Amendments.">
@@ -37,11 +39,11 @@
   <header>
     <nav>
       <a href="/">Home</a>
-      <a href="/lawn-grass-basics/">Lawn &amp; Grass Basics</a>
-      <a href="/weeds-pests-disease/">Weeds, Pests &amp; Disease</a>
-      <a href="/watering-drainage/">Watering, Irrigation &amp; Drainage</a>
+      <a href="/lawn-basics/">Lawn &amp; Grass Basics</a>
+      <a href="/weeds-pests/">Weeds, Pests &amp; Disease</a>
+      <a href="/watering-irrigation/">Watering, Irrigation &amp; Drainage</a>
       <a href="/soil-fertilizer/">Soil, Fertilizer &amp; Amendments</a>
-      <a href="/tools-yard-safety/">Tools &amp; Yard Safety</a>
+      <a href="/tools-safety/">Tools &amp; Yard Safety</a>
     </nav>
 
     <div class="searchbar">
