--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -56,9 +56,9 @@
   <main>
     <h1>Lawn and Grass Basics</h1>
 <p>Foundational lawn knowledge without the fluff. Grass types, mowing basics, common problems, and practical fixes.</p>
-<section>
-<article><h2><a href="/lawn-basics/test-page.html">Test Page</a></h2><p>This is a short blurb that should appear on the Lawn and Grass Basics hub page.</p></article>
-</section>
+<div class="cards">
+<div class="card"><h2 class="card-title"><a href="/lawn-basics/test-page.html">Test Page</a></h2><p class="card-blurb">This is a short blurb that should appear on the Lawn and Grass Basics hub page.</p><a class="read-more" href="/lawn-basics/test-page.html">Read more</a></div>
+</div>
   </main>
 
   <footer>
