--- a/tools-safety/index.html
+++ b/tools-safety/index.html
@@ -54,11 +54,9 @@
   </header>
 
   <main>
-    <h1>Tools, Equipment, & Yard Safety</h1>
+    <h1>Tools, Equipment, &amp; Yard Safety</h1>
 <p>Tools that actually matter, how to use them, and how to stay intact. Maintenance, safety, and choosing the right gear.</p>
-<section>
 <p>No articles yet.</p>
-</section>
   </main>
 
   <footer>
