--- a/watering-irrigation/index.html
+++ b/watering-irrigation/index.html
@@ -54,11 +54,9 @@
   </header>
 
   <main>
-    <h1>Watering, Irrigation, & Drainage</h1>
+    <h1>Watering, Irrigation, &amp; Drainage</h1>
 <p>Water is the lever. Scheduling, irrigation basics, runoff, pooling, and drainage problems.</p>
-<section>
 <p>No articles yet.</p>
-</section>
   </main>
 
   <footer>
