--- a/weeds-pests/index.html
+++ b/weeds-pests/index.html
@@ -54,11 +54,9 @@
   </header>
 
   <main>
-    <h1>Weeds, Pests, & Lawn Diseases</h1>
+    <h1>Weeds, Pests, &amp; Lawn Diseases</h1>
 <p>Identification first, then control. Weeds, insects, and common lawn diseases with realistic fixes.</p>
-<section>
 <p>No articles yet.</p>
-</section>
   </main>
 
   <footer>
