--- a/soil-fertilizer/index.html
+++ b/soil-fertilizer/index.html
@@ -54,11 +54,9 @@
   </header>
 
   <main>
-    <h1>Soil, Fertilizer, & Amendments</h1>
+    <h1>Soil, Fertilizer, &amp; Amendments</h1>
 <p>Soil drives everything. Fertilizer basics, amendments, pH, and practical soil improvement.</p>
-<section>
 <p>No articles yet.</p>
-</section>
   </main>
 
   <footer>
