added two pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 
   <title>GrizzlyGreens</title>
-  <meta name="description" content="Practical lawn and yard knowledge across mowing, weeds, watering, soil, tools, and safety.">
+  <meta name="description" content="Practical lawn, yard, and DIY outdoor knowledge: grass, weeds, watering, soil, and tools.">
   <link rel="canonical" href="https://grizzlygreens.net/">
 
   <meta name="robots" content="index,follow">
@@ -54,13 +54,7 @@
   </header>
 
   <main>
-    <h1>GrizzlyGreens</h1><p>Fast, practical lawn and yard knowledge. No fluff. Built to scale cleanly.</p><div class="cards">
-<div class="card"><h2 class="card-title"><a href="/lawn-basics/">Lawn and Grass Basics</a></h2><p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p><a class="read-more" href="/lawn-basics/">Open hub</a></div>
-<div class="card"><h2 class="card-title"><a href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a></h2><p class="card-blurb">Identification first, then control: weeds, insects, and common lawn diseases.</p><a class="read-more" href="/weeds-pests/">Open hub</a></div>
-<div class="card"><h2 class="card-title"><a href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a></h2><p class="card-blurb">Scheduling, irrigation basics, runoff, pooling, and drainage problems.</p><a class="read-more" href="/watering-irrigation/">Open hub</a></div>
-<div class="card"><h2 class="card-title"><a href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a></h2><p class="card-blurb">Soil fundamentals, fertilizer basics, amendments, pH, and improvement tactics.</p><a class="read-more" href="/soil-fertilizer/">Open hub</a></div>
-<div class="card"><h2 class="card-title"><a href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a></h2><p class="card-blurb">Tools that matter, how to use them, maintenance, and safety.</p><a class="read-more" href="/tools-safety/">Open hub</a></div>
-</div>
+    {{CONTENT}}
   </main>
 
   <footer>
