--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>Lawn and Grass Basics</title>
-  <meta name="description" content="All GrizzlyGreens articles in Lawn and Grass Basics.">
+  <title>Lawn and Grass Basics | GrizzlyGreens</title>
+  <meta name="description" content="Lawn and Grass Basics guides and articles.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/">
 
   <meta name="robots" content="index,follow">
@@ -54,11 +54,7 @@
   </header>
 
   <main>
-    <h1>Lawn and Grass Basics</h1>
-<p>Foundational lawn knowledge without the fluff. Grass types, mowing basics, common problems, and practical fixes.</p>
-<div class="cards">
-<div class="card"><h2 class="card-title"><a href="/lawn-basics/test-page.html">Test Page</a></h2><p class="card-blurb">This is a short blurb that should appear on the Lawn and Grass Basics hub page.</p><a class="read-more" href="/lawn-basics/test-page.html">Read more</a></div>
-</div>
+    {{CONTENT}}
   </main>
 
   <footer>
