--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>Weeds, Pests, & Lawn Diseases | GrizzlyGreens</title>
-  <meta name="description" content="Weeds, Pests, & Lawn Diseases guides and articles.">
-  <link rel="canonical" href="https://grizzlygreens.net/weeds-pests/">
+  <title>Warm Season vs Cool Season Grasses Explained | GrizzlyGreens</title>
+  <meta name="description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html">
 
   <meta name="robots" content="index,follow">
 
