--- a/lawn-basics/what-type-of-grass-do-i-have.html
+++ b/lawn-basics/what-type-of-grass-do-i-have.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>Weeds, Pests, & Lawn Diseases | GrizzlyGreens</title>
-  <meta name="description" content="Weeds, Pests, & Lawn Diseases guides and articles.">
-  <link rel="canonical" href="https://grizzlygreens.net/weeds-pests/">
+  <title>What Type of Grass Do I Have | GrizzlyGreens</title>
+  <meta name="description" content="This guide explains how to identify lawn grass by growth habit, leaf shape, texture, and seasonal behavior without lab tests or guesswork.">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/what-type-of-grass-do-i-have.html">
 
   <meta name="robots" content="index,follow">
 
