--- a/tools-safety/index.html
+++ b/tools-safety/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>Tools, Equipment, &amp; Yard Safety</title>
-  <meta name="description" content="All GrizzlyGreens articles in Tools, Equipment, &amp; Yard Safety.">
+  <title>Tools, Equipment, & Yard Safety | GrizzlyGreens</title>
+  <meta name="description" content="Tools, Equipment, & Yard Safety guides and articles.">
   <link rel="canonical" href="https://grizzlygreens.net/tools-safety/">
 
   <meta name="robots" content="index,follow">
@@ -54,9 +54,7 @@
   </header>
 
   <main>
-    <h1>Tools, Equipment, &amp; Yard Safety</h1>
-<p>Tools that actually matter, how to use them, and how to stay intact. Maintenance, safety, and choosing the right gear.</p>
-<p>No articles yet.</p>
+    {{CONTENT}}
   </main>
 
   <footer>
