--- a/watering-irrigation/index.html
+++ b/watering-irrigation/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>Watering, Irrigation, &amp; Drainage</title>
-  <meta name="description" content="All GrizzlyGreens articles in Watering, Irrigation, &amp; Drainage.">
+  <title>Watering, Irrigation, & Drainage | GrizzlyGreens</title>
+  <meta name="description" content="Watering, Irrigation, & Drainage guides and articles.">
   <link rel="canonical" href="https://grizzlygreens.net/watering-irrigation/">
 
   <meta name="robots" content="index,follow">
@@ -54,9 +54,7 @@
   </header>
 
   <main>
-    <h1>Watering, Irrigation, &amp; Drainage</h1>
-<p>Water is the lever. Scheduling, irrigation basics, runoff, pooling, and drainage problems.</p>
-<p>No articles yet.</p>
+    {{CONTENT}}
   </main>
 
   <footer>
