--- a/soil-fertilizer/index.html
+++ b/soil-fertilizer/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>Soil, Fertilizer, &amp; Amendments</title>
-  <meta name="description" content="All GrizzlyGreens articles in Soil, Fertilizer, &amp; Amendments.">
+  <title>Soil, Fertilizer, & Amendments | GrizzlyGreens</title>
+  <meta name="description" content="Soil, Fertilizer, & Amendments guides and articles.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/">
 
   <meta name="robots" content="index,follow">
@@ -54,9 +54,7 @@
   </header>
 
   <main>
-    <h1>Soil, Fertilizer, &amp; Amendments</h1>
-<p>Soil drives everything. Fertilizer basics, amendments, pH, and practical soil improvement.</p>
-<p>No articles yet.</p>
+    {{CONTENT}}
   </main>
 
   <footer>
