--- a/base.html
+++ b/base.html
@@ -1,75 +1,81 @@
+<!-- base.html -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{TITLE}}</title>
+  <meta name="description" content="{{DESCRIPTION}}">
+  <link rel="canonical" href="{{CANONICAL}}">
   <link rel="stylesheet" href="/styles.css">
 
-  <title>{{PAGE_TITLE}}</title>
-  <meta name="description" content="{{META_DESCRIPTION}}">
-  <link rel="canonical" href="{{CANONICAL_URL}}">
-
-  <meta name="robots" content="index,follow">
-
   <link rel="icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="48x48" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-MXR7KVMW56');
-  </script>
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="{{TITLE}}">
+  <meta property="og:description" content="{{DESCRIPTION}}">
+  <meta property="og:url" content="{{CANONICAL}}">
 
-  <style>
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.55; }
-    header, main, footer { max-width: 980px; margin: 0 auto; padding: 16px; }
-    header { border-bottom: 1px solid #ddd; }
-    nav a { margin-right: 12px; text-decoration: none; }
-    .searchbar { margin-top: 10px; }
-    .searchbar input { width: 100%; padding: 10px; font-size: 16px; }
-    footer { border-top: 1px solid #ddd; font-size: 14px; }
-  </style>
+  <!-- Google tag -->
+  {{GTAG}}
 </head>
-
 <body>
-  <header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/lawn-basics/">Lawn &amp; Grass Basics</a>
-      <a href="/weeds-pests/">Weeds, Pests &amp; Disease</a>
-      <a href="/watering-irrigation/">Watering, Irrigation &amp; Drainage</a>
-      <a href="/soil-fertilizer/">Soil, Fertilizer &amp; Amendments</a>
-      <a href="/tools-safety/">Tools &amp; Yard Safety</a>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="/" class="nav-link">Home</a>
+      <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
+      <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
+      <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
+      <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+      <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <div class="searchbar">
-      <form action="/search.html" method="get">
-        <input type="search" name="q" placeholder="Search GrizzlyGreens..." aria-label="Search">
-      </form>
+    <div class="search-wrap">
+      <input id="siteSearch" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
+      <select id="searchScope" class="search-scope">
+        <option value="all" selected>All hubs</option>
+        <option value="lawn-basics">Lawn &amp; Grass Basics</option>
+        <option value="weeds-pests">Weeds, Pests &amp; Disease</option>
+        <option value="watering-irrigation">Watering, Irrigation &amp; Drainage</option>
+        <option value="soil-fertilizer">Soil, Fertilizer &amp; Amendments</option>
+        <option value="tools-safety">Tools &amp; Yard Safety</option>
+      </select>
     </div>
   </header>
 
-  <main>
+  <main class="container">
     {{CONTENT}}
   </main>
 
-  <footer>
-    <div>
+  <footer class="site-footer">
+    <div class="footer-links">
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
-      <a href="/privacy-policy.html">Privacy Policy</a>
+      <a href="/privacy.html">Privacy Policy</a>
       <a href="/sitemap.xml">Sitemap</a>
     </div>
-    <div style="margin-top:10px;">
-      &copy; <span id="year"></span> GrizzlyGreens.net
-    </div>
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
+    <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
+
+  <script>
+  // Minimal search shell; real search index can come later.
+  (function () {
+    const q = document.getElementById("siteSearch");
+    const scope = document.getElementById("searchScope");
+    if (!q || !scope) return;
+    q.addEventListener("keydown", function (e) {
+      if (e.key !== "Enter") return;
+      const term = (q.value || "").trim();
+      if (!term) return;
+      // temporary: uses site: query so it works before you build a local index
+      const s = scope.value;
+      const hubPrefix = s === "all" ? "" : ("site:grizzlygreens.net/" + s + "/ ");
+      const url = "https://www.google.com/search?q=" + encodeURIComponent(hubPrefix + term);
+      window.open(url, "_blank");
+    });
+  })();
+  </script>
 </body>
 </html>
