--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
@@ -1,75 +1,148 @@
+<!-- base.html -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/styles.css">
-
-  <title>Warm Season vs Cool Season Grasses Explained | GrizzlyGreens</title>
+  <title>Warm Season vs Cool Season Grasses Explained</title>
   <meta name="description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html">
-
-  <meta name="robots" content="index,follow">
+  <link rel="stylesheet" href="/styles.css">
 
   <link rel="icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="48x48" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-MXR7KVMW56');
-  </script>
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Warm Season vs Cool Season Grasses Explained">
+  <meta property="og:description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html">
 
-  <style>
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.55; }
-    header, main, footer { max-width: 980px; margin: 0 auto; padding: 16px; }
-    header { border-bottom: 1px solid #ddd; }
-    nav a { margin-right: 12px; text-decoration: none; }
-    .searchbar { margin-top: 10px; }
-    .searchbar input { width: 100%; padding: 10px; font-size: 16px; }
-    footer { border-top: 1px solid #ddd; font-size: 14px; }
-  </style>
+  <!-- Google tag -->
+  {{GTAG}}
 </head>
-
 <body>
-  <header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/lawn-basics/">Lawn &amp; Grass Basics</a>
-      <a href="/weeds-pests/">Weeds, Pests &amp; Disease</a>
-      <a href="/watering-irrigation/">Watering, Irrigation &amp; Drainage</a>
-      <a href="/soil-fertilizer/">Soil, Fertilizer &amp; Amendments</a>
-      <a href="/tools-safety/">Tools &amp; Yard Safety</a>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="/" class="nav-link">Home</a>
+      <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
+      <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
+      <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
+      <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+      <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <div class="searchbar">
-      <form action="/search.html" method="get">
-        <input type="search" name="q" placeholder="Search GrizzlyGreens..." aria-label="Search">
-      </form>
+    <div class="search-wrap">
+      <input id="siteSearch" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
+      <select id="searchScope" class="search-scope">
+        <option value="all" selected>All hubs</option>
+        <option value="lawn-basics">Lawn &amp; Grass Basics</option>
+        <option value="weeds-pests">Weeds, Pests &amp; Disease</option>
+        <option value="watering-irrigation">Watering, Irrigation &amp; Drainage</option>
+        <option value="soil-fertilizer">Soil, Fertilizer &amp; Amendments</option>
+        <option value="tools-safety">Tools &amp; Yard Safety</option>
+      </select>
     </div>
   </header>
 
-  <main>
-    {{CONTENT}}
+  <main class="container">
+    <nav class="topnav">
+<a class="navlink" href="/">Home</a>
+<a class="navlink active" href="/lawn-basics/">Lawn and Grass Basics</a>
+<a class="navlink" href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a>
+<a class="navlink" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a>
+<a class="navlink" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a>
+<a class="navlink" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a>
+</nav>
+<div class="search-wrap">
+  <input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
+</div>
+<main class="container article">
+  <h1>Warm Season vs Cool Season Grasses Explained</h1>
+
+<h2>The core difference</h2>
+<p>Warm-season grasses are built for heat. Growth accelerates as temperatures climb and slows hard in cool weather.</p>
+<p>Cool-season grasses are built for mild temperatures. Growth surges in spring and fall, then struggles in heat.</p>
+<p>This is not a small detail. It drives the lawn’s green-up timing, stress tolerance, and recovery speed.</p>
+
+<h2>Growth calendar by season</h2>
+<p>Warm-season turf tends to look best from late spring through summer. It often goes tan or dull in cool months.</p>
+<p>Cool-season turf tends to look best in spring and fall. Summer can cause thinning, off-color patches, and stalled growth.</p>
+<p>Winter behavior varies by region, but the pattern stays consistent: warm-season declines earlier, cool-season holds color longer.</p>
+
+<h2>Temperature triggers that matter</h2>
+<p>Warm-season growth ramps when soil warms up and nights stay mild. Cold snaps can stall growth fast.</p>
+<p>Cool-season growth ramps when daytime highs are moderate and soil is not overheated. Heat and warm nights drive stress.</p>
+<p>Soil temperature matters more than a single warm day. Turf responds to trends, not one afternoon.</p>
+
+<h2>How to tell what type is in the yard</h2>
+<p>Seasonal timing is the cleanest clue. Early spring green-up usually points to cool-season turf.</p>
+<p>Summer dominance with a winter fade usually points to warm-season turf. A winter lawn that stays green often indicates cool-season or overseeding.</p>
+<p>Leaf texture and runner behavior help. Many warm-season grasses spread with visible runners, while many cool-season lawns spread by bunching or fine stolons depending on species.</p>
+
+<h2>Water needs and drought behavior</h2>
+<p>Warm-season grasses generally handle heat and short dry periods better once established. They can reduce growth and ride stress.</p>
+<p>Cool-season grasses often need more consistent moisture in hot weather. Heat plus dryness can turn minor stress into decline.</p>
+<p>Overwatering is not a fix. Saturated roots and shallow rooting make both types weaker under stress.</p>
+
+<h2>Mowing differences</h2>
+<p>Warm-season turf often tolerates lower mowing when growth is strong, but scalping during spring green-up can set it back.</p>
+<p>Cool-season turf usually performs better with slightly higher mowing in summer. Taller leaf blades shade soil and reduce heat stress.</p>
+<p>Blade sharpness matters for both. Ragged cuts increase browning and slow recovery.</p>
+
+<h2>Fertilizer timing and why it backfires</h2>
+<p>Warm-season feeding aligns with active summer growth. Heavy fertilizer during cool weather tends to waste product and encourage weak growth.</p>
+<p>Cool-season feeding aligns with spring and fall growth. Heavy fertilizer right before peak heat can push tender growth that burns out.</p>
+<p>Timing matters as much as product choice. Feeding when the grass is not growing well usually creates problems, not gains.</p>
+
+<h2>Overseeding and mixed lawns</h2>
+<p>Warm-season lawns are often overseeded with cool-season grass for winter color in some regions. That creates a seasonal handoff.</p>
+<p>Mixed lawns can happen naturally from patch repairs, shade zones, or past renovations. They rarely look uniform year-round.</p>
+<p>A mixed lawn is manageable, but expectations must match reality. Uniform color across all seasons is uncommon with mixed turf types.</p>
+
+<h2>What to do with the result</h2>
+<p>Confirming the season type sets the calendar. Watering, mowing height, and feeding should follow the grass’s active growth period.</p>
+<p>If the lawn looks great only part of the year, that is often normal behavior for the turf type. Chasing year-round peak color usually causes damage.</p>
+<p>When performance is consistently poor, the issue is usually shade, compaction, irrigation coverage, or soil problems, not the season category alone.</p>
+</main>
+<footer class="site-footer">
+<div class="footer-links">
+<a href="/about.html">About</a>
+<a href="/disclaimer.html">Disclaimer</a>
+<a href="/privacy-policy.html">Privacy Policy</a>
+<a href="/sitemap.xml">Sitemap</a>
+</div>
+<div class="footer-copy">&copy; 2025 grizzlygreens.net</div>
+</footer>
   </main>
 
-  <footer>
-    <div>
+  <footer class="site-footer">
+    <div class="footer-links">
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
-      <a href="/privacy-policy.html">Privacy Policy</a>
+      <a href="/privacy.html">Privacy Policy</a>
       <a href="/sitemap.xml">Sitemap</a>
     </div>
-    <div style="margin-top:10px;">
-      &copy; <span id="year"></span> GrizzlyGreens.net
-    </div>
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
+    <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
+
+  <script>
+  // Minimal search shell; real search index can come later.
+  (function () {
+    const q = document.getElementById("siteSearch");
+    const scope = document.getElementById("searchScope");
+    if (!q || !scope) return;
+    q.addEventListener("keydown", function (e) {
+      if (e.key !== "Enter") return;
+      const term = (q.value || "").trim();
+      if (!term) return;
+      // temporary: uses site: query so it works before you build a local index
+      const s = scope.value;
+      const hubPrefix = s === "all" ? "" : ("site:grizzlygreens.net/" + s + "/ ");
+      const url = "https://www.google.com/search?q=" + encodeURIComponent(hubPrefix + term);
+      window.open(url, "_blank");
+    });
+  })();
+  </script>
 </body>
 </html>
