--- a/lawn-basics/what-type-of-grass-do-i-have.html
+++ b/lawn-basics/what-type-of-grass-do-i-have.html
@@ -1,75 +1,128 @@
+<!-- base.html -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/styles.css">
-
-  <title>What Type of Grass Do I Have | GrizzlyGreens</title>
+  <title>What Type of Grass Do I Have</title>
   <meta name="description" content="This guide explains how to identify lawn grass by growth habit, leaf shape, texture, and seasonal behavior without lab tests or guesswork.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/what-type-of-grass-do-i-have.html">
-
-  <meta name="robots" content="index,follow">
+  <link rel="stylesheet" href="/styles.css">
 
   <link rel="icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="48x48" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-MXR7KVMW56');
-  </script>
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="What Type of Grass Do I Have">
+  <meta property="og:description" content="This guide explains how to identify lawn grass by growth habit, leaf shape, texture, and seasonal behavior without lab tests or guesswork.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/what-type-of-grass-do-i-have.html">
 
-  <style>
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.55; }
-    header, main, footer { max-width: 980px; margin: 0 auto; padding: 16px; }
-    header { border-bottom: 1px solid #ddd; }
-    nav a { margin-right: 12px; text-decoration: none; }
-    .searchbar { margin-top: 10px; }
-    .searchbar input { width: 100%; padding: 10px; font-size: 16px; }
-    footer { border-top: 1px solid #ddd; font-size: 14px; }
-  </style>
+  <!-- Google tag -->
+  {{GTAG}}
 </head>
-
 <body>
-  <header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/lawn-basics/">Lawn &amp; Grass Basics</a>
-      <a href="/weeds-pests/">Weeds, Pests &amp; Disease</a>
-      <a href="/watering-irrigation/">Watering, Irrigation &amp; Drainage</a>
-      <a href="/soil-fertilizer/">Soil, Fertilizer &amp; Amendments</a>
-      <a href="/tools-safety/">Tools &amp; Yard Safety</a>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="/" class="nav-link">Home</a>
+      <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
+      <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
+      <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
+      <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+      <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <div class="searchbar">
-      <form action="/search.html" method="get">
-        <input type="search" name="q" placeholder="Search GrizzlyGreens..." aria-label="Search">
-      </form>
+    <div class="search-wrap">
+      <input id="siteSearch" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
+      <select id="searchScope" class="search-scope">
+        <option value="all" selected>All hubs</option>
+        <option value="lawn-basics">Lawn &amp; Grass Basics</option>
+        <option value="weeds-pests">Weeds, Pests &amp; Disease</option>
+        <option value="watering-irrigation">Watering, Irrigation &amp; Drainage</option>
+        <option value="soil-fertilizer">Soil, Fertilizer &amp; Amendments</option>
+        <option value="tools-safety">Tools &amp; Yard Safety</option>
+      </select>
     </div>
   </header>
 
-  <main>
-    {{CONTENT}}
+  <main class="container">
+    <nav class="topnav">
+<a class="navlink" href="/">Home</a>
+<a class="navlink active" href="/lawn-basics/">Lawn and Grass Basics</a>
+<a class="navlink" href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a>
+<a class="navlink" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a>
+<a class="navlink" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a>
+<a class="navlink" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a>
+</nav>
+<div class="search-wrap">
+  <input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
+</div>
+<main class="container article">
+  <h1>What Type of Grass Do I Have</h1>
+<h2>Why Grass Identification Matters</h2>
+<p>Grass type determines mowing height, watering demand, and seasonal performance. Treating all lawns the same causes stress and slow decline.</p>
+<p>Correct identification prevents wasted effort. It aligns care with how the grass actually grows and recovers.</p>
+<h2>Growth Habit Is the First Clue</h2>
+<p>Some grasses spread sideways using runners above or below ground. Others grow in tight clumps that never creep.</p>
+<p>Spreading lawns repair damage faster. Clumping lawns stay patchy unless overseeded.</p>
+<h2>Blade Shape and Texture</h2>
+<p>Blade width ranges from hair-thin to coarse and wide. Texture stays consistent even when stressed.</p>
+<p>Run fingers across the leaf. Roughness, stiffness, and sharp edges narrow the options quickly.</p>
+<h2>Color and Seasonal Changes</h2>
+<p>Some grasses stay green through heat. Others fade or go dormant to survive stress.</p>
+<p>Winter color loss often signals warm-season types. Summer burn points to cool-season grass.</p>
+<h2>How the Lawn Responds to Mowing</h2>
+<p>Low mowing favors certain grasses and damages others. Recovery speed after cutting is a strong indicator.</p>
+<p>Scalping tolerance varies. Slow rebound suggests the grass is cut below its safe height.</p>
+<h2>Sun, Shade, and Location Behavior</h2>
+<p>Grass near trees, walls, or pavement often reveals its preferences. Consistent thinning shows incompatibility.</p>
+<p>Uniform performance across the yard suggests a well-matched species for the site.</p>
+<h2>Mixes and Overlapping Types</h2>
+<p>Many lawns contain multiple grasses. Differences appear as patches with distinct color or texture.</p>
+<p>Mixed lawns complicate care but explain uneven growth and seasonal shifts.</p>
+<h2>Confirming the Identification</h2>
+<p>Compare observed traits against known grass profiles. Focus on habit, blade, and seasonality.</p>
+<p>Photos taken across seasons help confirm conclusions without invasive testing.</p>
+</content_html>
+</main>
+<footer class="site-footer">
+<div class="footer-links">
+<a href="/about.html">About</a>
+<a href="/disclaimer.html">Disclaimer</a>
+<a href="/privacy-policy.html">Privacy Policy</a>
+<a href="/sitemap.xml">Sitemap</a>
+</div>
+<div class="footer-copy">&copy; 2025 grizzlygreens.net</div>
+</footer>
   </main>
 
-  <footer>
-    <div>
+  <footer class="site-footer">
+    <div class="footer-links">
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
-      <a href="/privacy-policy.html">Privacy Policy</a>
+      <a href="/privacy.html">Privacy Policy</a>
       <a href="/sitemap.xml">Sitemap</a>
     </div>
-    <div style="margin-top:10px;">
-      &copy; <span id="year"></span> GrizzlyGreens.net
-    </div>
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
+    <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
+
+  <script>
+  // Minimal search shell; real search index can come later.
+  (function () {
+    const q = document.getElementById("siteSearch");
+    const scope = document.getElementById("searchScope");
+    if (!q || !scope) return;
+    q.addEventListener("keydown", function (e) {
+      if (e.key !== "Enter") return;
+      const term = (q.value || "").trim();
+      if (!term) return;
+      // temporary: uses site: query so it works before you build a local index
+      const s = scope.value;
+      const hubPrefix = s === "all" ? "" : ("site:grizzlygreens.net/" + s + "/ ");
+      const url = "https://www.google.com/search?q=" + encodeURIComponent(hubPrefix + term);
+      window.open(url, "_blank");
+    });
+  })();
+  </script>
 </body>
 </html>
