--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
@@ -53,12 +53,7 @@
 <a class="navlink" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a>
 <a class="navlink" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a>
 <a class="navlink" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a>
-</nav>
-<div class="search-wrap">
-  <input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
-</div>
-<main class="container article">
-  <h1>Warm Season vs Cool Season Grasses Explained</h1>
+</nav><div class="search-wrap"><input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off"></div><main class="container article"><h1>Warm Season vs Cool Season Grasses Explained</h1>
 
 <h2>The core difference</h2>
 <p>Warm-season grasses are built for heat. Growth accelerates as temperatures climb and slows hard in cool weather.</p>
@@ -103,9 +98,7 @@
 <h2>What to do with the result</h2>
 <p>Confirming the season type sets the calendar. Watering, mowing height, and feeding should follow the grass’s active growth period.</p>
 <p>If the lawn looks great only part of the year, that is often normal behavior for the turf type. Chasing year-round peak color usually causes damage.</p>
-<p>When performance is consistently poor, the issue is usually shade, compaction, irrigation coverage, or soil problems, not the season category alone.</p>
-</main>
-<footer class="site-footer">
+<p>When performance is consistently poor, the issue is usually shade, compaction, irrigation coverage, or soil problems, not the season category alone.</p></main><footer class="site-footer">
 <div class="footer-links">
 <a href="/about.html">About</a>
 <a href="/disclaimer.html">Disclaimer</a>
