--- a/lawn-basics/what-type-of-grass-do-i-have.html
+++ b/lawn-basics/what-type-of-grass-do-i-have.html
@@ -53,12 +53,7 @@
 <a class="navlink" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a>
 <a class="navlink" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a>
 <a class="navlink" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a>
-</nav>
-<div class="search-wrap">
-  <input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off">
-</div>
-<main class="container article">
-  <h1>What Type of Grass Do I Have</h1>
+</nav><div class="search-wrap"><input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off"></div><main class="container article"><h1>What Type of Grass Do I Have</h1>
 <h2>Why Grass Identification Matters</h2>
 <p>Grass type determines mowing height, watering demand, and seasonal performance. Treating all lawns the same causes stress and slow decline.</p>
 <p>Correct identification prevents wasted effort. It aligns care with how the grass actually grows and recovers.</p>
@@ -83,9 +78,7 @@
 <h2>Confirming the Identification</h2>
 <p>Compare observed traits against known grass profiles. Focus on habit, blade, and seasonality.</p>
 <p>Photos taken across seasons help confirm conclusions without invasive testing.</p>
-</content_html>
-</main>
-<footer class="site-footer">
+</content_html></main><footer class="site-footer">
 <div class="footer-links">
 <a href="/about.html">About</a>
 <a href="/disclaimer.html">Disclaimer</a>
