--- a/index.html
+++ b/index.html
@@ -55,22 +55,34 @@
 </header>
 
 <main class="container">
-  <nav class="topnav">
-<a class="navlink" href="/">Home</a>
-<a class="navlink" href="/lawn-basics/">Lawn and Grass Basics</a>
-<a class="navlink" href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a>
-<a class="navlink" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a>
-<a class="navlink" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a>
-<a class="navlink" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a>
-</nav><div class="search-wrap"><input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off"></div><main class="container"><header class="hero"><h1>GrizzlyGreens</h1><p class="subtitle">Fast, practical lawn and yard knowledge. No fluff. Built to scale cleanly.</p></header><section class="grid"><article class="card"><h2 class="card-title"><a href="/lawn-basics/">Lawn and Grass Basics</a></h2><p class="card-text">Grass types, mowing basics, common problems, and practical fixes.</p><a class="btn secondary" href="/lawn-basics/">Open hub</a></article><article class="card"><h2 class="card-title"><a href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a></h2><p class="card-text">Identification first, then control: weeds, insects, and common lawn diseases.</p><a class="btn secondary" href="/weeds-pests/">Open hub</a></article><article class="card"><h2 class="card-title"><a href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a></h2><p class="card-text">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p><a class="btn secondary" href="/watering-irrigation/">Open hub</a></article><article class="card"><h2 class="card-title"><a href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a></h2><p class="card-text">Soil basics, nutrients, pH, and amendments that actually move the needle.</p><a class="btn secondary" href="/soil-fertilizer/">Open hub</a></article><article class="card"><h2 class="card-title"><a href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a></h2><p class="card-text">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p><a class="btn secondary" href="/tools-safety/">Open hub</a></article></section></main><footer class="site-footer">
-<div class="footer-links">
-<a href="/about.html">About</a>
-<a href="/disclaimer.html">Disclaimer</a>
-<a href="/privacy-policy.html">Privacy Policy</a>
-<a href="/sitemap.xml">Sitemap</a>
-</div>
-<div class="footer-copy">&copy; 2025 grizzlygreens.net</div>
-</footer>
+  <header class="hero">
+  <h1>GrizzlyGreens</h1>
+  <p class="subtitle">Fast, practical lawn and yard knowledge. No fluff. Built to scale cleanly.</p>
+</header>
+
+<section class="grid">
+  <article class="card">
+  <h2 class="card-title"><a href="/lawn-basics/">Lawn and Grass Basics</a></h2>
+  <p class="card-text">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <a class="btn secondary" href="/lawn-basics/">Open hub</a>
+</article><article class="card">
+  <h2 class="card-title"><a href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a></h2>
+  <p class="card-text">Identification first, then control: weeds, insects, and common lawn diseases.</p>
+  <a class="btn secondary" href="/weeds-pests/">Open hub</a>
+</article><article class="card">
+  <h2 class="card-title"><a href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a></h2>
+  <p class="card-text">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p>
+  <a class="btn secondary" href="/watering-irrigation/">Open hub</a>
+</article><article class="card">
+  <h2 class="card-title"><a href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a></h2>
+  <p class="card-text">Soil basics, nutrients, pH, and amendments that actually move the needle.</p>
+  <a class="btn secondary" href="/soil-fertilizer/">Open hub</a>
+</article><article class="card">
+  <h2 class="card-title"><a href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a></h2>
+  <p class="card-text">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p>
+  <a class="btn secondary" href="/tools-safety/">Open hub</a>
+</article>
+</section>
 </main>
 
 <footer class="site-footer">
