--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html
@@ -55,14 +55,7 @@
 </header>
 
 <main class="container">
-  <nav class="topnav">
-<a class="navlink" href="/">Home</a>
-<a class="navlink active" href="/lawn-basics/">Lawn and Grass Basics</a>
-<a class="navlink" href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a>
-<a class="navlink" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a>
-<a class="navlink" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a>
-<a class="navlink" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a>
-</nav><div class="search-wrap"><input id="site-search" class="search" type="search" placeholder="Search GrizzlyGreens..." autocomplete="off"></div><main class="container article"><h1>Warm Season vs Cool Season Grasses Explained</h1>
+  <h1>Warm Season vs Cool Season Grasses Explained</h1>
 
 <h2>The core difference</h2>
 <p>Warm-season grasses are built for heat. Growth accelerates as temperatures climb and slows hard in cool weather.</p>
@@ -107,15 +100,7 @@
 <h2>What to do with the result</h2>
 <p>Confirming the season type sets the calendar. Watering, mowing height, and feeding should follow the grass’s active growth period.</p>
 <p>If the lawn looks great only part of the year, that is often normal behavior for the turf type. Chasing year-round peak color usually causes damage.</p>
-<p>When performance is consistently poor, the issue is usually shade, compaction, irrigation coverage, or soil problems, not the season category alone.</p></main><footer class="site-footer">
-<div class="footer-links">
-<a href="/about.html">About</a>
-<a href="/disclaimer.html">Disclaimer</a>
-<a href="/privacy-policy.html">Privacy Policy</a>
-<a href="/sitemap.xml">Sitemap</a>
-</div>
-<div class="footer-copy">&copy; 2025 grizzlygreens.net</div>
-</footer>
+<p>When performance is consistently poor, the issue is usually shade, compaction, irrigation coverage, or soil problems, not the season category alone.</p>
 </main>
 
 <footer class="site-footer">
